2020-03-04  Lauro Moura  <lmoura@igalia.com>

        [WebDriver] Update screenshot/user_prompt expectations.

        They were marked as FAIL in r239824 due to upstream w3c tests not handling
        dialogs correctly and this handling not being in the spec.

        The correct handling was added to wpt in
        https://github.com/web-platform-tests/wpt/pull/17563, imported to webkit
        in r252358, and have been passing since in the GTK test bot.

        Also were added to the spec in https://github.com/w3c/webdriver/commit/32165846

        Unreviewed test gardening.

        * TestExpectations.json:

2020-01-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        Automation: evaluateJavaScriptFunction should use Promises
        https://bugs.webkit.org/show_bug.cgi?id=204151

        Reviewed by Brian Burg.

        Remove expectations for tests that are now passing.

        * TestExpectations.json:

2020-01-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Mark imported/w3c/webdriver/tests/switch_to_frame/cross_origin.py::test_nested_cross_origin_iframe as failure

        * TestExpectations.json:

2020-01-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed gardening. Add expectations for several tests failing

        * TestExpectations.json:

2020-01-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update W3C WebDriver imported tests.

        * TestExpectations.json:
        * imported/w3c/importer.json:
        * imported/w3c/tools/webdriver/webdriver/__init__.py:
        * imported/w3c/tools/webdriver/webdriver/client.py:
        * imported/w3c/tools/webdriver/webdriver/error.py:
        * imported/w3c/tools/webdriver/webdriver/transport.py:
        * imported/w3c/tools/wptrunner/docs/expectation.rst:
        * imported/w3c/tools/wptrunner/requirements.txt:
        * imported/w3c/tools/wptrunner/requirements_firefox.txt:
        * imported/w3c/tools/wptrunner/tox.ini: